veil-tests/src/compile_tests/fail/redact_all_variant_on_variant.rs
fn main() {}

#[derive(veil::Redact)]
pub enum Foo {
    #[redact(all, variant)]
    Bar,
}
